// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader Component Button version matches the snapshot 1`] = `
<div
  className="loader-align"
>
  <div
    className="btn-loader"
  />
  <br />
  Loading... Please Wait
</div>
`;

exports[`Loader Component Page version matches the snapshot 1`] = `
<div
  className="loader-align"
>
  <div
    className="page-loader"
  />
  <br />
  Loading... Please Wait
</div>
`;
